--- a/NTUVoteClient/NTUVoteClient.csproj
+++ b/NTUVoteClient/NTUVoteClient.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -53,7 +56,7 @@
       <DependentUpon>AuthenticateForm.cs</DependentUpon>
     </Compile>
     <Compile Include="BoothPanel.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="BoothPanel.Designer.cs">
       <DependentUpon>BoothPanel.cs</DependentUpon>
@@ -61,9 +64,7 @@
     <Compile Include="ApiClient.Private.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="CardReader.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="CardReader.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,7 +78,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="RecordPanel.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="RecordPanel.Designer.cs">
       <DependentUpon>RecordPanel.cs</DependentUpon>
@@ -103,6 +104,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
